[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edgartools>=4.30.0",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.2",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "pytest>=9.0.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sec-edgar-downloader>=5.0.3",
    "tensorflow-decision-forests>=1.12.0",
    "tensorflow-probability>=0.25.0",
    "tensorflow[and-cuda]==2.19.0",
    "yfinance>=0.2.66",
]
[project.scripts]
forecast = "cli:main"
